--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,6 @@ activityCompose = "1.9.1"
 composeBom = "2024.06.00"
 lifecycle-viewmodel-compose = "2.8.4"
 room = "2.6.1"
-kapt = "2.0.0"
 koin = "3.5.6"
 lifecycleRuntimeComposeAndroid = "2.8.4"
 gson = "2.11.0"
@@ -31,8 +30,8 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle-viewmodel-compose" }
-androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin" }
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
@@ -40,13 +39,12 @@ androidx-lifecycle-runtime-compose-android = { group = "androidx.lifecycle", nam
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
 [bundles]
-room = ["room-runtime", "room-compiler", "androidx-room-ktx"]
+room = ["room-runtime", "room-ktx", "room-compiler"]
 koin = ["koin-core", "koin-compose"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-kotlin-kapt = { id = "kotlin-kapt", version.ref = "kapt" }
 
 
